# CC-FCUP

./: README.md
first_year/first_sem/: functions.py  rascunhos.py  soso.txt  wp.py
first_year/first_sem/IP/f1/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
first_year/first_sem/IP/f2/: 1.py  2.py  3.py  4.py  5.py
first_year/first_sem/IP/f3/: 1.py  2.py  3.py  4.py
first_year/first_sem/IP/f4/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
first_year/first_sem/IP/f5/: 1.py  10.py  11.py  12.py  13.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
first_year/first_sem/IP/f6/: 1.py  2.py
first_year/first_sem/IP/f7/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
first_year/first_sem/IP/f8/: 1.py  2.py  3.py
first_year/first_sem/IP/f9/: 4.py  Fraction.py  MyComplex.py  Point.py
first_year/sec_sem/AC/f1/: programa1.c  programa1.i  programa1.out  programa1.s  programa1.sout  programa2  programa2.c  programa2.i  programa2.s  programa3  programa3.c  programa3.i  programa3.out  programa3.s  programao1.s  programao2.s  programao3.s
first_year/sec_sem/AC/f6/: 1sumint.asm  1sumsquare.asm  2.asm  3.asm  4.asm
first_year/sec_sem/AC/f7/: 1.asm  2.asm  3.asm
first_year/sec_sem/PF/avaliações/: 1.hs  2.hs  (+5 more)
second_year/first_sem/BD/: Eleicoes.db  eleiçoes.sql
second_year/sec_sem/DAA/: Maps.java  rascunho.java
second_year/sec_sem/PL/: #1  README.md
second_year/sec_sem/SO/: f1.txt  f2.txt  f3.txt
third_year/first_sem/C/pratica1-hs/: pratica1.cabal
third_year/first_sem/C/pratica1-hs/src/: Interpreter.hs  Tests.hs
(+401 files in other folders)
