cabal-version:      3.0
name:               pratica1
version:            0.1.0.0
synopsis:           Compiladores (CC3001) - pratica 1
description:        Compiladores (CC3001) - pratica 1
author:             Replace Author's Name
maintainer:         replace.author@email.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

executable pratica1
    import:           warnings
    main-is:          Tests.hs
    other-modules:    Interpreter
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
